-- For additional options, see
-- http://www.haskell.org/cabal/release/cabal-latest/doc/users-guide/authors.html#pkg-descr.
Name:                hmond
-- See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1
Synopsis:            Pseudo ganglia monitor.
Description:         A pseudo ganglia monitor providing metrics with faked values.
License:             BSD3
License-file:        LICENSE
Author:              Ben Armston
Maintainer:          ben.armston@googlemail.com
Copyright:           Ben Armston 2011
Category:            Network
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  
Cabal-version:       >=1.2


Executable hmond
  Main-is:           Main.hs
  Hs-Source-Dirs:    src
  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Build-depends:     base >= 4 && <5
                    ,bytestring >= 0.9 && < 1.0
                    ,cmdargs >= 0.6 && <0.7
                    ,ConfigFile >= 1.0 && < 1.2
                    ,xmlgen >= 0.4.0.1 && < 0.5
                    ,mtl >= 2.0 && < 2.1
                    ,network >= 2.2 && < 2.4
                    ,old-locale >= 1.0 && < 1.1
                    ,time >= 1.2 && < 1.3
                    ,unix >= 2.4 && < 2.6
                    ,utf8-string >= 0.3 && < 0.4
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
